# kmi-manager-cli

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  coverage.json  pyproject.toml  sitecustomize.py
.github/workflows/: pytest.yml
Docs/: README.md
Docs/SDD/: auth_findings.md  requirements.md
docs/: DOCUMENTATION_MIGRATION_CHECKLIST.md  DOCUMENTATION_REVIEW_REPORT.md  README.md  ROLLBACK.md  overview_ru.md  rotation_protection_plan.md  state_trace_schema.md  status_json_plan.md  trace_findings.md
docs/portable/: 00_INDEX.md  01_SETUP_NO_SUDO.md  02_SHELL_ENV.md  03_PROXY_OPS.md  04_TRACE_LOGS.md  05_DOCTOR.md  06_TROUBLESHOOTING.md  07_SECURITY_PERMS.md  08_SUDO_TASKS.md  09_AGENT_PLAYBOOK.md  10_PROXY_ROUTING_JOURNEY.md  11_NEW_MACHINE.md  12_ARCHITECTURE.md  13_CONFIG_REFERENCE.md  14_COMMANDS_REFERENCE.md  15_AUTH_FILES.md  16_PROXY_API.md  17_ROTATION_POLICY.md  18_HEALTH_USAGE.md  19_TRACE_SCHEMA.md  20_LOGGING.md  21_DATA_PATHS.md  22_TESTING.md  23_UPGRADE_MIGRATION.md  24_FAQ.md  25_RISKS_NOTES.md  26_PROXY_ROUND_ROBIN_INTERNALS.md  27_INTERCONNECTIONS.md  28_REQUIREMENTS_MATRIX.md  29_PORT_ENV_CONFLICTS.md  30_AUTOMATION_SCRIPTS.md  31_RETENTION_CLEANUP.md  32_FAILURE_RECOVERY.md  33_FULL_CIRCLE_LOOPS.md  34_AGENT_PLAN.json  README.md
kmi_manager_cli/: __init__.py
tests/: conftest.py  test_audit_errors_logging.py  test_auth_accounts.py  test_cli_help.py  test_cli_kimi_proxy.py  test_cli_proxy_control.py  test_cli_proxy_logs.py  test_cli_rotate.py  test_cli_status_json.py  test_cli_trace_read.py  test_config.py  test_config_helpers.py  test_doctor.py  test_doctor_helpers.py  test_health.py  test_health_extra.py  test_health_parsing.py  test_keys.py  test_keys_registry.py  test_kimi_config.py  test_locking.py  test_proxy.py  test_proxy_async.py  test_proxy_core.py  test_proxy_helpers.py  test_proxy_more.py  test_proxy_requests.py  test_robin.py  test_rotation.py  test_rotation_extra.py  test_scenarios.py  test_security.py  test_state.py  test_state_logic.py  test_time_utils.py  test_trace.py  test_trace_rotation.py  test_ui.py
(+133 files in other folders)
