[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmi-manager-cli"
version = "0.1.0"
description = "KMI Manager CLI for rotation, proxy, and tracing"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "KMI Manager CLI"}]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
  "tomli>=2.0.0; python_version < \"3.11\"",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
kmi = "kmi_manager_cli.cli:main"
kimi_robin = "kmi_manager_cli.robin:main"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
